feat: Declare an index's locales once instead of on every field
